--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,13 @@
 }
 
 body {
-  font-family: 'montseratt', sans-serif;
+  font-family: Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .app {
+  float: left;
+  width: 375px;
+  height: 667px;
   background-image: url('./assets/warm_clear_day.jpg');
   background-size: cover;
   background-position: bottom;
@@ -99,4 +102,34 @@ main {
   font-size: 48px;
   font-weight:  700;
   text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
+}
+
+.sources-box {
+  text-align: center;
+}
+
+.sources-box .sources {
+  position: relative;
+  display: inline-block;
+  margin: 60px 0 auto;
+  background-color: rgba(255,255,255,0.2);
+  border-radius: 16px;
+
+  padding: 10px 15px;
+
+  font-size: 15px;
+  font-weight: 300;
+  color: white;
+
+  text-align: center;
+  box-shadow: 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.sources-box .sources a {
+  color: lightblue;
+  text-decoration: none;
+}
+
+.sources-box .sources a:hover {
+  color: white;
 }
